# cjm-notebook-decompose-core

./: README.md  pyproject.toml
cjm_notebook_decompose_core/: compose.py  ingest.py  project.py  read.py
tests/: test_compose.py  test_project.py  test_reattribution.py
tests_manual/: real_notebook.py
